feat: integrate Google Gemini API for news article generation with advanced editorial controls and caching.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="news generator, AI, article writer, content creation, journalism">
   <meta name="author" content="News Generator AI">
   
+  <meta name="theme-color" content="#fdfbf7">
+  
   <title>News Generator AI - Transform Content into Professional Articles</title>
   
   <!-- Favicon -->
